--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,6 @@ services:
       - "5000:5000"
     depends_on:
       - db
-#    restart: always
 
   db:
     image: postgres:13-alpine3.15
@@ -34,6 +33,7 @@ services:
       - "8020:8020"
     depends_on:
       - db
+      - web
 
 volumes:
   postgres_data:
